Define ocamlformat-lib package

--- a/lib-rpc-server/dune
+++ b/lib-rpc-server/dune
@@ -1,4 +1,7 @@
 (library
  (name ocamlformat_rpc)
  (public_name ocamlformat.rpc)
- (libraries ocamlformat ocamlformat.bin_conf ocamlformat.rpc_lib_protocol))
+ (libraries
+  ocamlformat-lib
+  ocamlformat.bin_conf
+  ocamlformat.rpc_lib_protocol))
