--- a/bench/dune
+++ b/bench/dune
@@ -11,7 +11,7 @@
 
 (executable
  (name bench)
- (libraries bechamel bechamel-js ocamlformat stdio yojson))
+ (libraries bechamel bechamel-js ocamlformat-lib stdio yojson))
 
 (rule
  (alias runbench)
