--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,16 +40,16 @@ jobs:
         run: opam exec -- dune build @help --auto-promote
 
       - name: Test conventional profile
-        if: ${{ matrix.os }} == ubuntu-latest
+        runs-on: ubuntu-latest
         run: opam exec -- ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=conventional'
         shell: bash
 
       - name: Test janestreet profile
-        if: ${{ matrix.os }} == ubuntu-latest
+        runs-on: ubuntu-latest
         run: opam exec -- ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=janestreet'
         shell: bash
 
       - name: Test ocamlformat profile
-        if: ${{ matrix.os }} == ubuntu-latest
+        runs-on: ubuntu-latest
         run: opam exec -- ./tools/test_branch.sh -a origin/${{ github.event.pull_request.base.ref }} -b HEAD 'profile=ocamlformat'
         shell: bash
