--- a/ocamlformat-bench.opam
+++ b/ocamlformat-bench.opam
@@ -3,8 +3,18 @@ opam-version: "2.0"
 synopsis: "Auto-formatter for OCaml code"
 description:
   "OCamlFormat is a tool to automatically format OCaml code in a uniform style."
-maintainer: ["OCamlFormat Team <ocamlformat-dev@lists.ocaml.org>"]
-authors: ["Josh Berdine <jjb@fb.com>"]
+maintainer: [
+  "Guillaume Petiot <guillaume@tarides.com>"
+  "Jules Aguillon <jules@tarides.com>"
+  "Emile Trotignon <emile@tarides.com>"
+]
+authors: [
+  "Josh Berdine <jjb@fb.com>"
+  "Hugo Heuzard <hugo.heuzard@gmail.com>"
+  "Etienne Millon <etienne@tarides.com>"
+  "Guillaume Petiot <guillaume@tarides.com>"
+  "Jules Aguillon <jules@tarides.com>"
+]
 homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
