--- a/test/projects/dune
+++ b/test/projects/dune
@@ -61,7 +61,9 @@
  (enabled_if
   (<> %{os_type} Win32))
  (action
-  (diff disable_outside_detected_project.expected disable_outside_detected_project.output)))
+  (diff
+   disable_outside_detected_project.expected
+   disable_outside_detected_project.output)))
 
 (rule
  (deps
