--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -25,6 +25,7 @@ bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "ocaml" {>= "4.08"}
   "cmdliner" {with-test = "false" & >= "1.1.0" | with-test & >= "1.2.0"}
+  "csexp" {>= "1.4.0"}
   "dune" {>= "2.8"}
   "ocamlformat-lib" {= version}
   "ocamlformat-rpc-lib" {with-test & = version}
