--- a/ocamlformat-lib.opam
+++ b/ocamlformat-lib.opam
@@ -26,7 +26,7 @@ depends: [
   "dune-build-info"
   "either"
   "fix"
-  "fpath"
+  "fpath" {>= "0.7.3"}
   "menhir" {>= "20201216"}
   "menhirLib" {>= "20201216"}
   "menhirSdk" {>= "20201216"}
