--- a/.github/workflows/build-others.yml
+++ b/.github/workflows/build-others.yml
@@ -40,5 +40,8 @@ jobs:
       - name: Opam dependencies
         run: opam install --deps-only -t .
 
+      - name: Format
+        run: opam exec -- dune fmt
+
       - name: Runtest
         run: opam exec -- dune runtest
