--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Opam dependencies
         run: opam install --deps-only -t .
 
+      - name: Format
+        run: opam exec -- dune fmt
+
       - name: Build
         run: |
           opam exec -- dune subst
