--- a/ocamlformat.opam
+++ b/ocamlformat.opam
@@ -16,7 +16,7 @@ homepage: "https://github.com/ocaml-ppx/ocamlformat"
 bug-reports: "https://github.com/ocaml-ppx/ocamlformat/issues"
 depends: [
   "dune" {>= "2.8"}
-  "ocamformat-dev"
+  "ocamlformat-dev"
   "ocamlformat-lib" {= version}
   "odoc" {with-doc}
 ]
