--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -105,8 +105,8 @@ jobs:
 
       - name: Test ${{ matrix.profile }} profile
         run: |
-          chmod +x ocamlformat-a/ocamlformat ocamlformat-b/ocamlformat
-          ./tools/test_branch.sh $TEST_BRANCH_ARGS -n -a ocamlformat-a/ocamlformat -b ocamlformat-b/ocamlformat 'profile=${{ matrix.profile }}'
+          chmod +x ocamlformat-a/ocamlformat ocamlformat-b/ocamlformat ocamlformat-a/ocamlformat-dev ocamlformat-b/ocamlformat-dev
+          ./tools/test_branch.sh $TEST_BRANCH_ARGS -n -a ocamlformat-a/ocamlformat -b ocamlformat-b/ocamlformat-dev 'profile=${{ matrix.profile }}'
         shell: bash
         env:
           OCP_INDENT_CONFIG: ${{ matrix.ocp_indent_config }}
